[package]
name = "radicle-fetch"
license = "MIT OR Apache-2.0"
version = "0.1.0"
authors = ["Fintan Halpenny <fintan.halpenny@gmail.com>"]
edition = "2021"

[dependencies]
bstr = { version = "1.3" }
either = { version = "0" }
gix-actor = { version = "0.20.0" }
gix-hash = { version = "0.11.1" }
gix-lock = {version = "5.0" }
gix-object = { version = "0.29" }
gix-odb = { version = "0.45" }
gix-protocol = { version = "0.32.0", features = ["blocking-client"] }
gix-ref = { version = "0.29" }
gix-traverse = { version = "0.25" }
gix-validate = { version = "0.7" }
log = { version = "0.4.17", features = ["std"] }
nonempty = { version = "0.8.1" }
once_cell = { version = "1.13" }
radicle-git-ext = { version = "0.6.0", features = ["bstr"] }
thiserror = { version = "1" }

[dependencies.radicle-crypto]
path = "../radicle-crypto"
features = ["radicle-git-ext"]
